--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-select": "^5.10.1",
+    "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "yup": "^1.6.1"
