--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "countries-list": "^3.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
